2009-06-23  Daniel Poetzinger  <dev@aoemedia.de>

	* Added feature: Integrate processing instruction for crawler extension

2009-06-23  Oliver Hader  <oliver@typo3.org>

	* Cleanup: Added method to be used on delegating actions to the static cache data manipulation object
	* Cleanup: Fixed ChangeLog and formatting of processing instruction for crawler extension

2009-06-22  Oliver Hader  <oliver@typo3.org>

	* Fixed bug: Information whether page is marked dirty is missing in info module
	* Added feature: Integrate possibility to remove all expired pages in the info module
	* Added feature: Moved rendering of rows in info module to own method to be overridable by XCLASSes
	* Cleanup: Refactored clean dirty pages parts
	* Cleanup: Added method to determine the table name used to store cache information
	* Added feature: Integrate possibility to process all dirty pages in the info module

2009-06-12  Oliver Hader  <oliver@typo3.org>

	* Fixed bug: Info module does not show pages with a dokType above 199

2009-05-08  Oliver Hader  <oliver@typo3.org>

!!!	* Added feature: Changed database table to use InnoDB engine
	* Follow-up to feature #2598: Added missing 'isdirty' field to SQL definitions
	* Follow-up to feature #2598: Added new CLI task 'processDirtyPages' to process elements marked as dirty
	* Follow-up to feature #2598: Set 'isdirty' flag zero when database element gets updated

2009-05-07  Oliver Hader  <oliver@typo3.org>

	* Cleanup: Changed formatting of class tx_ncstaticfilecache and SQL file (non-functional changes)
	* Set version to 2.4.0-dev
	* Set version to 3.0.0-dev
	* Cleanup: Added protected/public definitions and set min. requirement to TYPO3 4.2.0
	* Cleanup: Removed superfluous class for debug output and integrated it to regular class
	* Cleanup: Removed CLI cleaner for elderly TYPO3 releases (< 4.1)
	* Fixed bug: Fixed some hanging record sets
	* Fixed bug: Info module does not work anymore due to calls to protected methods/variables