@@ -1,3 +1,7 @@
+2009-06-30  Oliver Hader  <oliver@typo3.org>
+
+	* Fixed bug: CLI debug output in processDirtyPages() does not contain directory name
+
 2009-06-23  Daniel Poetzinger  <dev@aoemedia.de>
 
 	* Added feature: Integrate processing instruction for crawler extension
